fixed scrollbar

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* overflow: hidden; */
+    overflow: hidden;
   }
 
   @font-face {
